Closed
Bug 1728132
Opened 4 years ago
Closed 4 years ago
Replace assertion in js::intl::ReportInternalError with ReportOutOfMemory
Categories
(Core :: Internationalization, defect, P2)
Core
Internationalization
Tracking
()
RESOLVED
FIXED
94 Branch
| Tracking | Status | |
|---|---|---|
| firefox94 | --- | fixed |
People
(Reporter: dminor, Assigned: gregtatum)
References
Details
(Whiteboard: [i18n-unification])
Attachments
(1 file)
Replace assertion in [1] with ReportOutOfMemory(cx). Suggested by Anba in https://phabricator.services.mozilla.com/D121410#4023019.
| Assignee | ||
Updated•4 years ago
|
Severity: -- → S3
Priority: -- → P2
Updated•4 years ago
|
Whiteboard: [i18n-unification]
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → gtatum
| Assignee | ||
Comment 1•4 years ago
|
||
Pushed by gtatum@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/658dee066e7c
Report mozilla::intl OOM errors in SpiderMonkey; r=anba
Comment 3•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox94:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•